--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-:root {
-    --main-blue-color: #264fb4;
-    --promo-text-color: #f0f0f0;
+
+
+
+
+
+body {
+}
+
 
 .wrapper {
     max-width: 1920px;
